Fix text rotator overflow bug and relative positioning bug

--- a/client/stylesheets/components/layout.import.less
+++ b/client/stylesheets/components/layout.import.less
@@ -1,4 +1,4 @@
-.container {
+.test {
 	position: relative;
 }
 
@@ -6,7 +6,10 @@
 Splash
 ********/
 #splash-menu {
+	min-height: 700px;
+	position: relative;
 	padding: 100px 0;
+	text-align: center;
 }
 
 //create grid button
@@ -24,3 +27,4 @@ About
 #about {
 //	.top-ap(100%);
 }
+
