--- a/client/stylesheets/components/module.import.less
+++ b/client/stylesheets/components/module.import.less
@@ -16,7 +16,7 @@ Splash
 ********/
 //resize main logo
 #splash img { height: 80px }
-#splash-menu {  text-align: center; h3, i {color: @body-bg;} }
+#splash-menu { h3, i {color: @body-bg;} }
 
 
 
